2001-01-07  Neil Booth  <neil@daikokuya.demon.co.uk>

        * toplev.c (main): Call the front-end specific post_options
        hook if one is given.
        * toplev.h (struct_lang_hooks, lang_hooks): New.
        * c-lang.c (c_post_options, lang_hooks): Implement lang_hooks
        for the C front end.
        * cp/decl2.c (cxx_post_options, lang_hooks): Implement
        lang_hooks for the C++ front end.
        * objc/objc-act.c (objc_post_options, lang_hooks): Implement
        lang_hooks for the ObjC front end.
        * f/com.c (lang_hooks): Hooks for the Fortran front end.
        * java/lang.c (lang_hooks): Hooks for the Java front end.

2001-01-07  Neil Booth  <neil@daikokuya.demon.co.uk>

        * c-lex.c (init_c_lex): Request #define / #undef callbacks
        for verbose DWARF[2] debugging.
        (cb_define, cb_undef): The new callbacks.
        * toplev.h (debug_define, debug_undef): Make const correct.
        * toplev.c (debug_define, debug_undef): Similarly.  Do not   
        perform the verbosity tests here anymore.

2001-01-07  Alexandre Oliva  <aoliva@redhat.com>

	* reload.c (subst_reloads): Take INSN argument.  When
	replacing a LABEL_REF in a JUMP_INSN, add a REG_LABEL note.
	* reload.h (subst_reloads): Adjust prototype.
	* reload1.c (reload_as_needed): Pass INSN to subst_reloads.
	* jump.c (mark_all_labels): Canonicalize any REG_LABEL notes
	present in JUMP_INSNs and copy them to JUMP_LABEL.
	* flow.c (find_label_refs, find_basic_blocks_1): Skip
	JUMP_INSNs and insns with REG_LABELs that are followed by
	JUMP_INSNs with the same REG_LABEL.
	* sched-rgn.c (is_cfg_nonregular): Likewise.
	* rtlanal.c (computed_jump_p): Make it false if a REG_LABEL
	note is available.
	* unroll.c (unroll_loop): Look for REG_LABEL notes in
	JUMP_INSNs too.
	* rtl.texi (REG_LABEL): Document usage in JUMP_INSNs.

2001-01-06  Richard Henderson  <rth@redhat.com>

	* loop.c (scan_loop): Use xcalloc for the regs array.